# jumpstart

./: .gitignore  Cargo.toml  README.md  config.yml
.claude/: settings.local.json
.github/workflows/: test.yml
src/: app_launcher.rs  config.rs  gui.rs  main.rs  mock.rs  monitor.rs  window.rs
